--- a/client/src/media/login.css
+++ b/client/src/media/login.css
@@ -14,13 +14,14 @@ header {
 }
 
 header h1 {
-    font-size: 3em;
+    font-size: 2.5em;
     text-align: center;
 }
 
 header img {
-    height: 100px;
-    width: 100px;
+    height: 80px;
+    width: 80px;
+    margin: 0.5em;
 }
 
 main {
@@ -33,4 +34,41 @@ main {
     display: flex;
     flex-direction: column;
     align-items: center;
+    box-shadow: 0 0.5em 0.5em #ccc;
+}
+
+a {
+    color: #465F72;
+}
+
+input {
+    padding: 0.3em;
+    border: 0.1em solid #1F1F1F;
+    border-radius: 0.5em;
+}
+
+input, label {
+    display: block;
+    margin: 0.5em;
+}
+
+input[type="submit"] {
+    margin: 1em auto;
+}
+
+@media (prefers-color-scheme: dark) {
+    body {
+        background-color: #1F1F1F;
+        color: white;
+    }
+    header img {
+        filter: invert();
+    }
+    main {
+        background-color: #333;
+        box-shadow: none;
+    }
+    a {
+        color: #6689A1;
+    }
 }
