--- a/client/src/media/main.css
+++ b/client/src/media/main.css
@@ -4,9 +4,11 @@ html {
 }
 
 body {
+    background-color: #D1D6DC;
+    font-family: sans-serif;
     display: flex;
     flex-direction: row-reverse;
-    height: 100%;
+    height: 100vh;
     margin: 0;
     padding: 0;
 }
@@ -14,20 +16,44 @@ body {
 main, aside {
     height: 90%;
     padding: 1em;
-    margin: 1em auto;
-    border-radius: 0.5em;
-    background-color: lightgray;
-    box-shadow: 0.2em 0.2em 1em #999;
+    /* box-shadow: 0.2em 0.2em 1em #999; */
 }
 
 main {
-    width: 70%;
+    width: 75%;
+    background-color: #EEF0F2;
 }
 
 aside {
-    width: 20%;
+    width: 25%;
 }
 
 ul { 
     list-style: none;
+    padding: 0;
+}
+
+li {
+    border-radius: 0.3em;
+    margin: 0 0.5em;
+    padding: 0.5em;
+}
+
+li:hover {
+    background-color: #EEF0F2;
+    color: #000;
+}
+
+@media (prefers-color-scheme: dark) {
+    body {
+        background-color: #1F1F1F;
+        color: white;
+    }
+    main {
+        background-color: #333;
+        box-shadow: none;
+    }
+    a {
+        color: #6689A1;
+    }
 }
