--- a/client/src/media/main.css
+++ b/client/src/media/main.css
@@ -9,6 +9,7 @@ html {
     --dark-foreground: #333;
     --accent: #317BB3;
     --dark-accent: #7BAFD1;
+    --border: #7a7a7a;
 }
 body {
     background-color: var(--light-background);
@@ -27,19 +28,23 @@ nav {
     width: 25%;
 }
 main {
-    width: 75%;
     background-color: var(--light-foreground);
+    width: 75%;
 }
 
 /* Account List */
-ul { 
+nav ul { 
     list-style: none;
+    max-height: 90%;
+    overflow: scroll;
     padding: 0;
+    scroll-behavior: smooth;
 }
 li {
     border-radius: 0.3em;
     margin: 0 0.5em;
     padding: 0.5em;
+    user-select: none;
 }
 .active, li:hover[class="active"] {
     background-color: var(--accent);
@@ -47,7 +52,7 @@ li {
 }
 li:hover {
     background-color: var(--light-foreground);
-    transition: background-color ease-in-out 0.3s;
+    transition: background-color ease-in-out 0.1s;
 }
 
 /* Search Bar */
@@ -55,7 +60,7 @@ input[type="text"], input[type="password"], input[type="search"] {
     border: 0.1em solid var(--light-background);
     border-radius: 0.4em;
     margin: 0.5em auto;
-    padding: 0.5em;
+    padding: 0.7em;
     width: 95%;
 }
 input, label {
@@ -64,6 +69,9 @@ input, label {
 }
 
 /* Main View */
+hr {
+    margin-bottom: 1em;
+}
 button {
     border: 0.1em solid var(--light-background);
     border-radius: 0.4em;
@@ -76,8 +84,15 @@ header button {
     float: right;
     margin: 0.5em auto;
 }
+section h1 {
+    font-size: 2em;
+}
 section button {
     margin: auto 0 0 auto;
+}
+main label {
+    font-size: 0.8em;
+    font-weight: lighter;
 }
 
 /* Dark Mode Colour Scheme */
@@ -98,5 +113,10 @@ section button {
     }
     header button {
         border-color: var(--dark-accent);
+    }
+    input[type="text"], input[type="password"], input[type="search"] {
+        background-color: var(--dark-foreground);
+        border-color: var(--border);
+        color: #fff;
     }
 }
