--- a/client/src/media/main.css
+++ b/client/src/media/main.css
@@ -5,9 +5,6 @@
     padding: 0;
 }
 html {
-    font-family: sans-serif;
-    height: 100vh;
-
     --light-background: #E0E3E7;
     --light-foreground: #EEF0F2;
     --dark-background: #1F1F1F;
@@ -19,9 +16,10 @@ html {
 body {
     background-color: var(--light-background);
     display: flex;
+    font-family: sans-serif;
     flex-direction: row;
     flex-wrap: wrap;
-    height: 100%;
+    height: 100vh;
     margin: 0;
     overflow: hidden;
     padding: 0;
@@ -29,16 +27,26 @@ body {
 nav {
     flex-grow: 1;
     flex-basis: 150px;
+    height: 90%;
     max-width: 300px;
     /* padding: 0 1em; */
 }
 main {
     background-color: var(--light-foreground);
-    flex-grow: 3;
+    flex-grow: 2;
     padding: 1em 1em 1em 1.5em;
+}
+footer {
+    display: flex;
+    flex-basis: 100%;
+    height: fit-content;
+    padding: 0.7em;
 }
 h1 {
     margin: 0.3em 0;
+}
+.inline {
+    display: inline;
 }
 
 /* Header */
@@ -70,7 +78,7 @@ nav ul {
     max-height: 90%;
     overflow: scroll;
     padding: 0 1.5em;
-    scroll-behavior: smooth;
+    /* scroll-behavior: smooth; */
 }
 nav li {
     border-radius: 0.3em;
@@ -95,10 +103,10 @@ input[type="search"] {
     width: 85%;
     
 }
-input[type="text"], input[type="password"] {
+input[type="text"], input[type="password"], input[type="url"], textarea {
     width: 95%;
 }
-input {
+input, textarea {
     border: 0.1em solid var(--light-background);
     border-radius: 0.4em;
     padding: 0.7em;
@@ -106,6 +114,10 @@ input {
 input, label {
     display: block;
     margin: 0.5em;
+}
+input[name="title"] {
+    font-size: 1.2em;
+    font-weight: bold;
 }
 
 /* Main View */
@@ -147,7 +159,7 @@ main label {
     header button {
         border-color: var(--dark-accent);
     }
-    input[type="text"], input[type="password"], input[type="search"] {
+    input, textarea {
         background-color: var(--dark-foreground);
         border-color: var(--border);
         color: #fff;
