--- a/client/src/media/login.css
+++ b/client/src/media/login.css
@@ -20,6 +20,7 @@ header {
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
+    -webkit-app-region: drag;
 }
 
 header h1 {
