--- a/client/src/media/main.css
+++ b/client/src/media/main.css
@@ -136,7 +136,7 @@ section h1 {
     font-size: 2em;
 }
 section button {
-    margin: auto 0 0 auto;
+    margin: 0 0.5em 0 auto;
 }
 main label, legend {
     font-size: 0.8em;
